--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
                 </div>
                 <div class="nav_bar_lt">
                     <ul>
-                        <li><a href=""><i class="fa-regular fa-user fa-lg" style="color: #000000;"></i></a></li>
+                        <li><a href=""><i class="fa-regular fa-user" style="color: #000000;"></i></a></li>
                         <!-- <li><a href=""><i class="fa-solid fa-magnifying-glass fa-lg" style="color: #000000;"></i></a></li> -->
-                        <li><a href=""><i class="fa-solid fa-cart-shopping fa-lg" style="color: #000000;"></i></a></li>
+                        <li><a href=""><i class="fa-solid fa-cart-shopping" style="color: #000000;"></i></a></li>
                     </ul>
                 </div>
             </div>
@@ -151,9 +151,9 @@
         <div>
             <h2>Follow Us</h2>
             <ul class="followUs_list">
-                <li class="socialMedia_item"><a href=""><i class="fa-brands fa-facebook-f fa-lg" style="color: #ffffff;"></i></a></li>
-                <li class="socialMedia_item"><a href=""><i class="fa-brands fa-twitter fa-lg" style="color: #ffffff;"></i></a></li>
-                <li class="socialMedia_item"><a href=""><i class="fa-brands fa-instagram fa-xl" style="color: #ffffff;"></i></a></li>
+                <li class="socialMedia_item"><a href=""><i class="fa-brands fa-facebook-f" style="color: #ffffff;"></i></a></li>
+                <li class="socialMedia_item"><a href=""><i class="fa-brands fa-twitter" style="color: #ffffff;"></i></a></li>
+                <li class="socialMedia_item"><a href=""><i class="fa-brands fa-instagram" style="color: #ffffff;"></i></a></li>
             </ul>
         </div>
     </footer>
