adding some comments

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
     <head>
         <nav>
+            <!-- Navigation bar with logo, category dropdown, search bar, and user/cart icons. -->
             <div class="nav-bar">
                 <div class="nav_bar_rt">
                     <div class="logo_div"><h1><a href="/">Crystal Bloom</a></h1></div>
@@ -30,7 +31,6 @@
                 <div class="nav_bar_lt">
                     <ul>
                         <li><a href=""><i class="fa-regular fa-user" style="color: #000000;"></i></a></li>
-                        <!-- <li><a href=""><i class="fa-solid fa-magnifying-glass fa-lg" style="color: #000000;"></i></a></li> -->
                         <li><a href=""><i class="fa-solid fa-cart-shopping" style="color: #000000;"></i></a></li>
                     </ul>
                 </div>
@@ -38,6 +38,7 @@
         </nav>
     </head>
     <main>
+        <!-- Hero section with a title, description, and call-to-action button. -->
         <section class="heroSection">
             <div><img src="background-image.jpg"></div>
             <div class="content">
@@ -46,6 +47,7 @@
                 <div><button>Shop the Collection</button></div>
             </div>
         </section>
+        <!-- Best Sellers section showcasing popular products with images, titles, and purchase buttons. -->
         <section class="sellersSection">
             <div class="section_title">
                 <h1 class="titre1">Our Best Sellers</h1>
@@ -74,6 +76,7 @@
                 </div>
             </div>
         </section>
+        <!-- Collections section displaying categories with images, titles, product counts, and discover buttons. -->
         <section class="collectionSection">
             <div class="section_title"><h1 class="titre1">Collections</h1></div>
             <div class="row">
@@ -111,6 +114,7 @@
                 </div>
             </div>
         </section>
+        <!-- introducing the brand's vision, mission, and curated collection with an image and descriptive text. -->
         <section class="aboutSection">
             <div class="section_title"><h1>About Us</h1></div>
             <div>
