navbar update for mobile version

--- a/index.html
+++ b/index.html
@@ -35,6 +35,10 @@
                     </ul>
                 </div>
             </div>
+            <div class="search_Mobile">
+                <input class="" type="search" name="search" placeholder="Search a Product" aria-label="Search">
+                <button class="" type="submit" ><i class="fa-solid fa-magnifying-glass " style="color: #000000;"></i></button>
+            </div>
         </nav>
     </head>
     <main>
